made some changes to the friends list

--- a/EagleSocial/View/Main.storyboard
+++ b/EagleSocial/View/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Friends View Controller-->
+        <!--Friends-->
         <scene sceneID="Sga-4V-oDf">
             <objects>
                 <viewController id="3Ea-5N-C7I" customClass="FriendsViewController" customModule="EagleSocial" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,15 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" barStyle="black" placeholder="Search for people" translatesAutoresizingMaskIntoConstraints="NO" id="Qmj-fP-N3G">
-                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="3Ea-5N-C7I" id="fHA-pM-W8z"/>
-                                </connections>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="etO-aV-1l5">
-                                <rect key="frame" x="0.0" y="76" width="375" height="542"/>
+                                <rect key="frame" x="0.0" y="120" width="375" height="498"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="friendCell" id="gPM-X4-OtB">
@@ -39,12 +32,19 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" barStyle="black" placeholder="Search for people" translatesAutoresizingMaskIntoConstraints="NO" id="Qmj-fP-N3G">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3Ea-5N-C7I" id="fHA-pM-W8z"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="etO-aV-1l5" firstAttribute="trailing" secondItem="n5N-kC-a4F" secondAttribute="trailing" id="16v-1w-UET"/>
                             <constraint firstItem="etO-aV-1l5" firstAttribute="top" secondItem="Qmj-fP-N3G" secondAttribute="bottom" id="6lf-wy-3zP"/>
-                            <constraint firstItem="Qmj-fP-N3G" firstAttribute="top" secondItem="t8M-t8-n1M" secondAttribute="top" constant="20" id="Pcw-U4-2g0"/>
+                            <constraint firstItem="Qmj-fP-N3G" firstAttribute="top" secondItem="t8M-t8-n1M" secondAttribute="top" constant="64" id="Pcw-U4-2g0"/>
                             <constraint firstItem="Qmj-fP-N3G" firstAttribute="leading" secondItem="n5N-kC-a4F" secondAttribute="leading" id="PuO-Kc-7af"/>
                             <constraint firstItem="etO-aV-1l5" firstAttribute="leading" secondItem="n5N-kC-a4F" secondAttribute="leading" id="RCN-QQ-bBH"/>
                             <constraint firstItem="etO-aV-1l5" firstAttribute="top" secondItem="Qmj-fP-N3G" secondAttribute="bottom" id="lHe-9i-qX1"/>
@@ -53,7 +53,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="n5N-kC-a4F"/>
                     </view>
-                    <navigationItem key="navigationItem" id="0ao-xn-VzC"/>
+                    <navigationItem key="navigationItem" title="Friends" id="0ao-xn-VzC">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Zmb-5r-O2b"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="friendTableView" destination="etO-aV-1l5" id="lwm-zo-8z4"/>
                         <outlet property="searchBar" destination="Qmj-fP-N3G" id="6tP-E1-ccB"/>
@@ -750,7 +752,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wkF-nk-NTf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="316" y="1442"/>
+            <point key="canvasLocation" x="1255" y="1459"/>
         </scene>
         <!--News Feed-->
         <scene sceneID="EqU-9e-2vn">
