--- a/EagleSocial/View/MessageCell/MessageCell.xib
+++ b/EagleSocial/View/MessageCell/MessageCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" id="KGk-i7-Jjw" customClass="MessageCell" customModule="EagleSocial" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customMessageCell" id="KGk-i7-Jjw" customClass="MessageCell" customModule="EagleSocial" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -35,7 +35,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message Label Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gvs-Xy-uNg" userLabel="Message Body Label">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message Label Body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gvs-Xy-uNg" userLabel="Message Body Label">
                                 <rect key="frame" x="10" y="30" width="227" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -61,7 +61,6 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="I2i-Kd-raX" secondAttribute="bottom" constant="13.5" id="Eba-m4-7Dm"/>
                     <constraint firstItem="Qh3-VO-cx0" firstAttribute="leading" secondItem="I2i-Kd-raX" secondAttribute="trailing" constant="10" id="JeJ-0b-Cjz"/>
                     <constraint firstItem="Qh3-VO-cx0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="VaP-0P-n87"/>
                     <constraint firstItem="I2i-Kd-raX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="Vyk-qC-dUz"/>
